# namaz-mosque-ai-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  backend-namespace.yaml  deployment.yaml  hpa.yaml  ingress.yaml  main.py  pyproject.toml  requirements.txt  sample_dotenv.txt  service.yaml  utils.py
.github/workflows/: docker-image.yml
config/: config.py
custom_exceptions/: exceptions.py
k8s/: deployment.yaml  ingress.yaml
models/: model.py
mosque_clock_ai/: constants.py  main.py  models.py  utils.py
routers/: upload_image.py
utils/: constant.py  vllm_utils.py
